# tHit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: pbr.scene
assets/hair002/: hair002.mtl  hair002.ply  readme.md
assets/shaders/: BufferVisualisation.frag  debug.frag  debug.vert  hair.frag  hair.vert  lambert.frag  resolve_ppll_blend.frag  resolve_ppll_blend.vert  shader.frag  shader.vert  shadow_depth.vert
assets/testball/: ue4pbr.json
model-viewer/: CMakeLists.txt  readme.md
model-viewer/shaders/: hair.frag  hair.vert  shader.frag  shader.vert
model-viewer/src/: aabb.h  arcball.cpp  arcball.h  asset_manager.cpp  asset_manager.h  camera.h  mikktspace_wrapper.h  model-viewer.cpp  trackball_viewer.cpp  trackball_viewer.h  window.cpp  window.h
model-viewer/src/gfx/: pipeline.cpp  pipeline.h
model-viewer/src/gl460/: Formats.cpp  Formats.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  buffer.cpp  buffer.h  framebuffer.cpp  framebuffer.h  gl_enum_string_helper.h  image_format.cpp  image_format.h  renderbuffer.cpp  renderbuffer.h  texture.cpp  texture.h  types.cpp
model-viewer/src/hair/: cyHairFile.h  hair.cpp  hair.h
model-viewer/src/renderpass/: DepthPrePas.h  FullScreenPass.h  RenderPass.h  ShadowDepthPass.cpp  ShadowDepthPass.h  ShadowPass.cpp  ShadowPass.h  renderpass.cpp
model-viewer/src/scene/: README.md  loader.cpp  loader.h  loader_types.h  mesh.cpp  mesh.h  scene.cpp  scene.h
model-viewer/src/utils/: geometry_tool.cpp  geometry_tool.h  utils.cpp  utils.h
